--- a/index.html
+++ b/index.html
@@ -1,5 +1,19 @@
 <head>
-    <title>Project Pizza 2</title>
+    <title>the sharkle land of pizza and more</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <link rel="icon" href="https://revival-list.com/logo/ProjectPizza.png">
 </head>
-
-<h1>evil pizza place</h1>
+<body data-bs-theme="dark">
+    <!-- begin navbar insert-->
+    <nav class="navbar bg-body-tertiary">
+        <div class="container">
+            <a class="navbar-brand" href="#">Project Pizza</a>
+        </div>
+    </nav>
+    <!-- end navbar insert -->
+    <h1>Welcome to Project Pizza.</h1>
+    <p>Hi, I'm sharklebanan, and I've been given ownership of the Project Pizza brand. So enjoy this dogshit site for now while I figure out
+        what to do with it.
+    </p>
+</body>
