--- a/index.html
+++ b/index.html
@@ -8,12 +8,36 @@
     <!-- begin navbar insert-->
     <nav class="navbar bg-body-tertiary">
         <div class="container">
-            <a class="navbar-brand" href="#">Project Pizza</a>
+            <a class="navbar-brand" href="#"><img width="25" src="https://revival-list.com/logo/ProjectPizza.png"> Project Pizza</a>
         </div>
     </nav>
     <!-- end navbar insert -->
-    <h1>Welcome to Project Pizza.</h1>
-    <p>Hi, I'm sharklebanan, and I've been given ownership of the Project Pizza brand. So enjoy this dogshit site for now while I figure out
-        what to do with it.
-    </p>
+    <div class="container mt-3">
+        <div class="jumbotron">
+            <h1>Welcome to Project Pizza.</h1>
+        </div>
+        <p>Hi, I'm sharklebanan, and I've been given ownership of the Project Pizza brand. So enjoy this dogshit site for now while I figure out
+            what to do with it. This will probably not be a revival in the near future, and will stay as this static Github Pages site for the foreseeable future.
+        </p>
+        <div class="row">
+            <div class="col text-center card bg-body-tertiary">
+                <div class="card-body">
+                    <h3>Murdle can go fuck himself</h3>
+                    <a href="/murdle.html">here are a few reasons why</a>
+                </div>
+            </div>
+            <div class="col text-center card bg-body-tertiary">
+                <div class="card-body">
+                    <h3>Murdle can go fuck himself</h3>
+                    <a href="/murdle.html">here are a few reasons why</a>
+                </div>
+            </div>
+            <div class="col text-center card bg-body-tertiary">
+                <div class="card-body">
+                    <h3>Murdle can go fuck himself</h3>
+                    <a href="/murdle.html">here are a few reasons why</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
