change navbar brand link to /

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- begin navbar insert-->
     <nav class="navbar bg-body-tertiary">
         <div class="container">
-            <a class="navbar-brand" href="#"><img width="25" src="https://revival-list.com/logo/ProjectPizza.png"> Project Pizza</a>
+            <a class="navbar-brand" href="/"><img width="25" src="https://revival-list.com/logo/ProjectPizza.png"> Project Pizza</a>
         </div>
     </nav>
     <!-- end navbar insert -->
